// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`JetpackConnectMain goToPlans should dispatch analytics 1`] = `
Array [
  "calypso_jpc_success_redirect",
  Object {
    "type": "plans_selection",
    "url": "example.com",
  },
]
`;

exports[`JetpackConnectMain goToPluginActivation should dispatch analytics 1`] = `
Array [
  "calypso_jpc_success_redirect",
  Object {
    "type": "plugin_activation",
    "url": "example.com",
  },
]
`;

exports[`JetpackConnectMain goToPluginInstall should dispatch analytics 1`] = `
Array [
  "calypso_jpc_success_redirect",
  Object {
    "type": "plugin_install",
    "url": "example.com",
  },
]
`;

exports[`JetpackConnectMain goToRemoteAuth should dispatch analytics 1`] = `
Array [
  "calypso_jpc_success_redirect",
  Object {
    "type": "remote_auth",
    "url": "example.com",
  },
]
`;
